--- a/template/register.html
+++ b/template/register.html
@@ -25,7 +25,7 @@
                                     </div>
                                 {% endif %}
                                 <div class="form-row">
-                                    <div class="col-md-6">
+                                    {% comment %} <div class="col-md-6">
                                         <div class="form-group">
                                             <label class="small mb-1">First Name</label>
                                             {{ form.first_name }}
@@ -36,7 +36,7 @@
                                             <label class="small mb-1">Last Name</label>
                                             {{ form.last_name }}
                                         </div>
-                                    </div>
+                                    </div> {% endcomment %}
                                 </div>
                                 <div class="form-row">
                                     <div class="col-md-6">
